2012-09-03
		* select.mpt now shows g.square, df, and p
		* select.mpt has argument dataset
		
2012-08-30
		* added function plot.prediction.
		* added FIA.penalty to output with FIA.
		* removed bug when select.mpt from models with fit
		  fit.aggregated = FALSE

2012-07-24
		* make.mdt now uses dimnames(data)[[1]] as index (with warning).

2012-07-20
		* make.mdt can now handle a matrix or data.frame, updated .Rd file
		* reactivated examples for the gen.data examples (gen.data.Rd)
		* make.mdt now makes mdt files that HMMTree can handle

2012-07-18
		* disabled examples for the gen.data examples (gen.data.Rd)

2012-07-16
		* added sample.data function for nonparametric bootstrap
		* added data argument to gen.data. Now, either data or 
		  n.per.item.type need to be non-null (but not both).

2012-07-10
		* now comments in model and restrictions files are treated like 
		  in normal R (i.e., only everything after # is ignored).
		  Changed: .read.MPT.model() and .read.MPT.restrictions()

2012-07-09
		* added functions gen.predictions and gen.data
		* MPTinR is now byte compiled.
		
2012-05-08
		* resolved bug when obtaining FIA for individual data sets

2012-05-02
		* resolved bug when obtaining FIA from model specified via textConnection.
		
2012-04-26
		* fit.mptinr now checks if there is a gradient/hessian function and 
		  sets use.gradient/use.hessian FALSE otherwise.

2012-04-18
		* copy editing on documentation.
		* select.mpt(): renamed n.model.df to n.independent.categories

2012-04-16
		* more work on bug when paramaters in restrictions are not in model 
		  (work from yesterday introduced more problems)
		  added function .check.restrictions() which also reads the restrictions
		* added an aggregated example to fit.mpt.Rd

2012-04-14
		* data element now contains indidivudal and aggregated data
		* more work on bug when paramaters in restrictions are not in model 

2012-04-13
		* removed warning when cell counts are < 5